// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HitsPerPage renders markup with state 1`] = `
<ng-ais-hits-per-page
  cx={[Function Function]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-ResultsPerPage"
  >
    
        
    <select
      class="ais-ResultsPerPage-select"
    >
      
          
      
      <option
        class="ais-ResultsPerPage-option"
        value="10"
      >
        
            10 per page
          
      </option>
      <option
        class="ais-ResultsPerPage-option"
        value="20"
      >
        
            20 per page
          
      </option>
      <option
        class="ais-ResultsPerPage-option"
        value="30"
      >
        
            30 per page
          
      </option>
      
        
    </select>
    
      
  </div>
    
</ng-ais-hits-per-page>
`;

exports[`HitsPerPage renders markup without state 1`] = `
<ng-ais-hits-per-page
  cx={[Function Function]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      
    
</ng-ais-hits-per-page>
`;

exports[`HitsPerPage should be hidden with autoHideContainer 1`] = `
<ng-ais-hits-per-page
  autoHideContainer={[Function Boolean]}
  cx={[Function Function]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      
    
</ng-ais-hits-per-page>
`;
